# diploma

./: .dockerignore  .env.example  .gitignore  .tarignore  Makefile  README.md  alembic.ini  endpoints_table.txt  insert_mock_reports.py  loc.sh  logging.yml  make_routes_table.py  pyproject.toml  requirements.txt  ruff.toml  test.py  todo.md  todo2.md  translator.yml  приложение А.txt  реализация.txt  юзкейс.txt
contrib/: script.sql
contrib/docker/: docker-compose.g4f.yml  docker-compose.local.yml  docker-compose.prod.yml  docker-entrypoint.sh
contrib/docker/base/: Dockerfile
contrib/docker/fastapi/: Dockerfile
contrib/docker/nginx/: Dockerfile  nginx.conf  nginx.dev.conf
contrib/docker/postgres/: Dockerfile  postgresql.conf
contrib/docs/: TODO.md  econ.md  economics.md  main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc  presentation.md  table-output.txt  table_formatter.py  test.aux  test.fdb_latexmk  test.fls  test.tex
contrib/front/: .env.production  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo
contrib/persistent_data/: languages.json  models.json  prompts.json  report-reasons.json
src/: depends.py  handlers.py  http_responses.py  logger.py  main.py  manage.py  pagination.py  responses.py  settings.py  sorting.py
src/commands/: create_admin.py  insert_languages.py  insert_models.py  insert_prompts.py  insert_report_reasons.py  start_mail_consumer.py  start_translator_consumer.py
src/database/: __init__.py  helpers.py  models.py
tests/: hot_load.py  test_six_hot_loads.py
(+148 files in other folders)
